# riemann-kb

./: README.md
case/: .gitignore  README.md  bottom_plate.scad  bottom_shell.scad  case_assembly.scad  center_cover.scad  front_cover.scad  middle_shell.scad  mounting.scad  plate_assembly.scad  rear_cover_piccolo.scad  rounded_square.scad  top_plate.scad  top_shell.scad  vars.scad
firmware/: Cargo.toml
firmware/src/: changed.rs  debounce.rs  digit.rs  emoji.rs  encoder.rs  key_macro.rs  keymap.rs  main.rs  nkro.rs  report.rs  usb.rs
firmware/src/keycode/: mod.rs  qmk.rs
pcb/: .gitignore  encoder_key.kicad_sch  key.kicad_sch  leds.kicad_sch  matrix.kicad_sch  riemann.kicad_prl  riemann.kicad_pro  riemann.kicad_sch
