[package]
name = "riemann"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2"
fugit = "0.3"
rp2040-boot2 = "0.2"
rp2040-hal = { version = "0.6", features = ["rt"] }
usb-device = "0.2"
usbd-human-interface-device = "0.4.2"
frunk = { version = "0.4.2", default-features = false }
packed_struct = { version = "0.10.1", default-features = false }
heapless = { version = "0.7.16", default-features = false }

[profile.dev]
opt-level = 3
lto = true

[profile.release]
opt-level = 3
lto = true
